--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "ytdl-core": "^4.11.5"
   }
 }
